fix - align items for form

--- a/app/assets/stylesheets/users.sass
+++ b/app/assets/stylesheets/users.sass
@@ -37,11 +37,11 @@
   font-family: 'Aref Ruqaa', serif !important
   display: flex
   justify-content: center
-  align-items: center
   height: 100vh
   margin: 0 auto 0 auto
   padding: 0 20px
   max-width: 900pt
+  padding-top: 70pt
 
   h1, h4
     text-align: center
@@ -63,7 +63,7 @@
   .right-box
     width: 300pt
     min-width: 235pt
-    min-height: 500px
+    height: 500px
     border: 10px solid
     padding: 0 20pt
     margin-bottom: 20pt
@@ -278,7 +278,7 @@
     right: 10px
     bottom: 10px
     img
-      width: 178p
+      width: 178pt
       height: 300pt
 
 #user-form-edit-container
@@ -431,9 +431,10 @@
       display: flex
       flex-direction: column
       margin-right: 20px
+      height: 500px
       img
         width: 500pt
-        // height: 500pt
+        height: 100%
         object-fit: contain
 
     .right-box
